@@ -1,3 +1,10 @@
+2007-08-17  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Sven Arvidsson <sa@whiz.se>
+
+	* gnome-default-applications.xml.in: add browser and mail entries for
+	Iceape, the debranded Seamonkey version used by Debian (bug #467472)
+
 2007-08-01  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-at-commandline.in.in: don't use '==', and improve
